Translated applications cannot use remote methods with BOOL arguments https://bugs.webkit.org/show_bug.cgi?id=238651 <rdar://90509457>

Reviewed by Geoffrey Garen.

Propagate the fix from r261155 to WKRemoteObjectCoder's method-signature-equality test as well,
so that BOOL arguments correctly compare as equal between a Rosetta application and its
native ARM Web Content process.

* Shared/API/Cocoa/WKRemoteObjectCoder.h:
* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(WebKit::methodSignaturesAreCompatible):
(decodeInvocation):
Relax argument signature validation slightly, considering signed char and BOOL,
which are equivalent and sometimes substituted for each other, to be equal.

* Shared/API/Cocoa/_WKRemoteObjectRegistry.mm:
(-[_WKRemoteObjectRegistry _invokeMethod:]):
(blockSignaturesAreCompatible): Deleted.



Canonical link: https://commits.webkit.org/249112@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292209 268f45cc-cd09-0410-ab3c-d52691b4dbfc